force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/SVMXA360__CONF_PricebookAssignmentRule__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration rules based on which the entitlement engine assigns the right Service Pricebook based on Contract/  Asset Warranty/ Account-based/  Regional Warranty or Contract on Work Order.</description>
    <label>Pricebook Assignment Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricebook Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricebook Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>