force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/fields/SVMXA360__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Pricebook Assignment Rule is active (True) or not (False).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>