force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>A text description of this record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>