force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/fields/SVMXA360__ExpressionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Expression using which the Pricebook Assignment rule will be qualified.</description>
    <label>Qualifying Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Pricebook Assignment Rules</relationshipLabel>
    <relationshipName>Pricebook_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>