force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>The API name of the source object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>