force-app/main/default/objects/SVMXA360__CONF_PricebookAssignmentRule__c/fields/SVMXA360__Pricebook__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Pricebook.</description>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pricebook Assignment Rules</relationshipLabel>
    <relationshipName>Pricebook_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>